# AB--UNIT20-MSMK

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Test_CMakeLists.txt
data/: archivo_citas.txt  archivo_medicos.txt  archivo_pacientes.txt  especialidades.csv  historial_PDC0.csv
include/: Administrador.hpp  Archivo.hpp  ArchivosActivos.hpp  Cita.hpp  EnfermedadCronica.hpp  Formateador.hpp  GestorCitas.hpp  GestorEspecialidades.hpp  GestorMedicos.hpp  GestorPacientes.hpp  HistorialMedico.hpp  ICreadorDeCitas.hpp  IDGenerator.hpp  InputValidator.hpp  Medico.hpp  Paciente.hpp  Reporte.hpp
src/: Administrador.cpp  Archivo.cpp  Cita.cpp  EnfermedadCronica.cpp  Formateador.cpp  GestorCitas.cpp  GestorEspecialidades.cpp  GestorMedicos.cpp  GestorPacientes.cpp  HistorialMedico.cpp  IDGenerator.cpp  InputValidator.cpp  Medico.cpp  Paciente.cpp  Reporte.cpp  main.cpp
